--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
+        platform: ["amd64", "arm64"]
         include:
           - type: gnu
           - type: musl
@@ -32,7 +33,7 @@ jobs:
           context: ./
           file: ./base/${{ matrix.type }}.Dockerfile
           pull: true
-          tags: base-img-${{ matrix.type }}:dev-ga
+          tags: base-img-${{ matrix.type }}
           outputs: type=docker,dest=/tmp/base-img-${{ matrix.type }}.tar
           labels: |
             tech.harmless.experimental.name="base-img-${{ matrix.type }}:dev-ga"
@@ -40,19 +41,21 @@ jobs:
             tech.harmless.experimental.run_number="${{ github.run_number }}"
             tech.harmless.experimental.repo="${{ github.repositoryUrl }}"
             tech.harmless.experimental.build_date="${{ env.BUILD_DATE }}"
+            tech.harmless.experimental.platform="${{ matrix.platform }}"
             org.opencontainers.image.authors="harmless-tech, crow-rest"
-          platforms: linux/amd64,linux/arm64/v8
+          platforms: linux/${{ matrix.platform }}
           builder: ${{ steps.buildx.outputs.name }}
       - name: Upload image
         uses: actions/upload-artifact@v3
         with:
-          name: base-img-${{ matrix.type }}
+          name: base-img-${{ matrix.type }}-${{ matrix.platform }}
           path: /tmp/base-img-${{ matrix.type }}.tar
 
   cross:
     strategy:
       fail-fast: false
       matrix:
+        platform: ["amd64", "arm64"]
         include:
           - target: x86_64-unknown-linux-gnu
             type: gnu
@@ -96,7 +99,7 @@ jobs:
       - name: Download image
         uses: actions/download-artifact@v3
         with:
-          name: base-img-${{ matrix.type }}
+          name: base-img-${{ matrix.type }}-${{ matrix.platform }}
           path: /tmp
       - name: Load image
         run: |
@@ -119,11 +122,12 @@ jobs:
             tech.harmless.experimental.run_number="${{ github.run_number }}"
             tech.harmless.experimental.repo="${{ github.repositoryUrl }}"
             tech.harmless.experimental.build_date="${{ env.BUILD_DATE }}"
+            tech.harmless.experimental.platform="${{ matrix.platform }}"
             org.opencontainers.image.authors="harmless-tech, crow-rest"
-          platforms: linux/amd64,linux/arm64/v8
+          platforms: linux/${{ matrix.platform }}
           builder: ${{ steps.buildx.outputs.name }}
       - name: Upload image
         uses: actions/upload-artifact@v3
         with:
-          name: cross-${{ matrix.target }}
+          name: cross-${{ matrix.target }}-${{ matrix.platform }}
           path: /tmp/cross-${{ matrix.target }}.tar
