--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,11 +45,14 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      - name: Compress
+        working-directory: /tmp
+        run: xz -v9T0 base-img-${{ matrix.type }}.tar
       - name: Upload image
         uses: actions/upload-artifact@v3
         with:
           name: base-img-${{ matrix.type }}-${{ matrix.platform }}
-          path: /tmp/base-img-${{ matrix.type }}.tar
+          path: /tmp/base-img-${{ matrix.type }}.tar.xz
 
   cross:
     strategy:
@@ -102,6 +105,9 @@ jobs:
         with:
           name: base-img-${{ matrix.type }}-${{ matrix.platform }}
           path: /tmp
+      - name: Decompress
+        working-directory: /tmp
+        run: xz -vd base-img-${{ matrix.type }}.tar.xz
       - name: Load image
         run: |
           docker load --input /tmp/base-img-${{ matrix.type }}.tar
