--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,58 +8,55 @@ on:
   workflow_dispatch:
 
 jobs:
-  base:
-    strategy:
-      fail-fast: true
-      matrix:
-        platform: ["amd64", "arm64"]
-        type: ["gnu", "musl"]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Docker Setup Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Vars
-        run: |
-          echo "BUILD_DATE=$(date --utc)" >> $GITHUB_ENV
-      - name: Build and push Docker images
-        uses: docker/build-push-action@v4
-        with:
-          context: ./
-          file: ./base/${{ matrix.type }}.Dockerfile
-          pull: true
-          tags: base-img-${{ matrix.type }}
-          outputs: type=docker,dest=/tmp/base-img-${{ matrix.type }}.tar
-          labels: |
-            tech.harmless.experimental.name="base-img-${{ matrix.type }}:dev-ga"
-            tech.harmless.experimental.pull_request_build="${{ github.event_name == 'pull_request' }}"
-            tech.harmless.experimental.run_number="${{ github.run_number }}"
-            tech.harmless.experimental.repo="${{ github.repositoryUrl }}"
-            tech.harmless.experimental.build_date="${{ env.BUILD_DATE }}"
-            tech.harmless.experimental.platform="${{ matrix.platform }}"
-            org.opencontainers.image.authors="harmless-tech, crow-rest"
-          platforms: linux/${{ matrix.platform }}
-          builder: ${{ steps.buildx.outputs.name }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-      - name: Compress
-        working-directory: /tmp
-        run: xz -v9T0 base-img-${{ matrix.type }}.tar
-      - name: Upload image
-        uses: actions/upload-artifact@v3
-        with:
-          name: base-img-${{ matrix.type }}-${{ matrix.platform }}
-          path: /tmp/base-img-${{ matrix.type }}.tar.xz
+#  base:
+#    strategy:
+#      fail-fast: true
+#      matrix:
+#        platform: [amd64, arm64]
+#        type: [gnu, musl]
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v2
+#      - name: Docker Setup Buildx
+#        id: buildx
+#        uses: docker/setup-buildx-action@v2
+#      - name: Vars
+#        run: |
+#          echo "BUILD_DATE=$(date --utc)" >> $GITHUB_ENV
+#      - name: Build and push Docker images
+#        uses: docker/build-push-action@v4
+#        with:
+#          context: ./
+#          file: ./base/${{ matrix.type }}.Dockerfile
+#          pull: true
+#          tags: base-img-${{ matrix.type }}
+#          outputs: type=docker,dest=/tmp/base-img-${{ matrix.type }}.tar
+#          labels: |
+#            tech.harmless.experimental.name="base-img-${{ matrix.type }}:dev-ga"
+#            tech.harmless.experimental.pull_request_build="${{ github.event_name == 'pull_request' }}"
+#            tech.harmless.experimental.run_number="${{ github.run_number }}"
+#            tech.harmless.experimental.repo="${{ github.repositoryUrl }}"
+#            tech.harmless.experimental.build_date="${{ env.BUILD_DATE }}"
+#            tech.harmless.experimental.platform="${{ matrix.platform }}"
+#            org.opencontainers.image.authors="harmless-tech, crow-rest"
+#          platforms: linux/${{ matrix.platform }}
+#          builder: ${{ steps.buildx.outputs.name }}
+#          cache-from: type=gha
+#          cache-to: type=gha,mode=max
+#      - name: Upload image
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: base-img-${{ matrix.type }}-${{ matrix.platform }}
+#          path: /tmp/base-img-${{ matrix.type }}.tar
 
   cross:
     strategy:
       fail-fast: false
       matrix:
-        platform: ["amd64", "arm64"]
-        type: ["gnu", "musl"]
+        platform: [amd64, arm64]
+        type: [gnu, musl]
         include:
           - target: x86_64-unknown-linux-gnu
             type: gnu
@@ -92,7 +89,7 @@ jobs:
 #          - target: x86_64-pc-windows-gnu
 #          - target: i686-pc-windows-gnu
     runs-on: ubuntu-latest
-    needs: [base]
+#    needs: [base]
     steps:
       - uses: actions/checkout@v3
       - name: Set up QEMU
@@ -105,9 +102,6 @@ jobs:
         with:
           name: base-img-${{ matrix.type }}-${{ matrix.platform }}
           path: /tmp
-      - name: Decompress
-        working-directory: /tmp
-        run: xz -vd base-img-${{ matrix.type }}.tar.xz
       - name: Load image
         run: |
           docker load --input /tmp/base-img-${{ matrix.type }}.tar
@@ -120,7 +114,7 @@ jobs:
         with:
           context: .
           file: ./cross/Dockerfile
-          pull: true
+          pull: false
           tags: cross:${{ matrix.target }}
           outputs: type=docker,dest=/tmp/cross-${{ matrix.target }}.tar
           labels: |
