--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,55 +8,53 @@ on:
   workflow_dispatch:
 
 jobs:
-#  base:
-#    strategy:
-#      fail-fast: true
-#      matrix:
-#        platform: [amd64, arm64]
-#        type: [gnu, musl]
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v3
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v2
-#      - name: Docker Setup Buildx
-#        id: buildx
-#        uses: docker/setup-buildx-action@v2
-#      - name: Vars
-#        run: |
-#          echo "BUILD_DATE=$(date --utc)" >> $GITHUB_ENV
-#      - name: Build and push Docker images
-#        uses: docker/build-push-action@v4
-#        with:
-#          context: ./
-#          file: ./base/${{ matrix.type }}.Dockerfile
-#          pull: true
-#          tags: base-img-${{ matrix.type }}
-#          outputs: type=docker,dest=/tmp/base-img-${{ matrix.type }}.tar
-#          labels: |
-#            tech.harmless.experimental.name="base-img-${{ matrix.type }}:dev-ga"
-#            tech.harmless.experimental.pull_request_build="${{ github.event_name == 'pull_request' }}"
-#            tech.harmless.experimental.run_number="${{ github.run_number }}"
-#            tech.harmless.experimental.repo="${{ github.repositoryUrl }}"
-#            tech.harmless.experimental.build_date="${{ env.BUILD_DATE }}"
-#            tech.harmless.experimental.platform="${{ matrix.platform }}"
-#            org.opencontainers.image.authors="harmless-tech, crow-rest"
-#          platforms: linux/${{ matrix.platform }}
-#          builder: ${{ steps.buildx.outputs.name }}
-#          cache-from: type=gha
-#          cache-to: type=gha,mode=max
-#      - name: Upload image
-#        uses: actions/upload-artifact@v3
-#        with:
-#          name: base-img-${{ matrix.type }}-${{ matrix.platform }}
-#          path: /tmp/base-img-${{ matrix.type }}.tar
+  base:
+    strategy:
+      fail-fast: true
+      matrix:
+        platform: [amd64, arm64]
+        type: [gnu, musl]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Docker Setup Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Vars
+        run: |
+          echo "BUILD_DATE=$(date --utc)" >> $GITHUB_ENV
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v4
+        with:
+          context: ./
+          file: ./base/${{ matrix.type }}.Dockerfile
+          pull: true
+          tags: base-img-${{ matrix.type }}
+          outputs: type=docker,dest=/tmp/base-img-${{ matrix.type }}.tar
+          labels: |
+            tech.harmless.experimental.name="base-img-${{ matrix.type }}:dev-ga"
+            tech.harmless.experimental.pull_request_build="${{ github.event_name == 'pull_request' }}"
+            tech.harmless.experimental.run_number="${{ github.run_number }}"
+            tech.harmless.experimental.repo="${{ github.repositoryUrl }}"
+            tech.harmless.experimental.build_date="${{ env.BUILD_DATE }}"
+            tech.harmless.experimental.platform="${{ matrix.platform }}"
+            org.opencontainers.image.authors="harmless-tech, crow-rest"
+          platforms: linux/${{ matrix.platform }}
+          builder: ${{ steps.buildx.outputs.name }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      - name: Upload image
+        uses: actions/upload-artifact@v3
+        with:
+          name: base-img-${{ matrix.type }}-${{ matrix.platform }}
+          path: /tmp/base-img-${{ matrix.type }}.tar
 
   cross:
     strategy:
       fail-fast: false
       matrix:
-        platform: [amd64, arm64]
-        type: [gnu, musl]
         include:
           - target: x86_64-unknown-linux-gnu
             type: gnu
@@ -89,7 +87,7 @@ jobs:
 #          - target: x86_64-pc-windows-gnu
 #          - target: i686-pc-windows-gnu
     runs-on: ubuntu-latest
-#    needs: [base]
+    needs: [base]
     steps:
       - uses: actions/checkout@v3
       - name: Set up QEMU
@@ -97,19 +95,19 @@ jobs:
       - name: Docker Setup Buildx
         id: buildx
         uses: docker/setup-buildx-action@v2
-      - name: Download image
+      - name: Download image (amd64)
         uses: actions/download-artifact@v3
         with:
-          name: base-img-${{ matrix.type }}-${{ matrix.platform }}
+          name: base-img-${{ matrix.type }}-amd64
           path: /tmp
-      - name: Load image
+      - name: Load image (amd64)
         run: |
           docker load --input /tmp/base-img-${{ matrix.type }}.tar
           docker image ls -a
       - name: Vars
         run: |
           echo "BUILD_DATE=$(date --utc)" >> $GITHUB_ENV
-      - name: Build and push Docker images
+      - name: Build and push Docker images (amd64)
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -123,14 +121,53 @@ jobs:
             tech.harmless.experimental.run_number="${{ github.run_number }}"
             tech.harmless.experimental.repo="${{ github.repositoryUrl }}"
             tech.harmless.experimental.build_date="${{ env.BUILD_DATE }}"
-            tech.harmless.experimental.platform="${{ matrix.platform }}"
+            tech.harmless.experimental.platform="amd64"
             org.opencontainers.image.authors="harmless-tech, crow-rest"
-          platforms: linux/${{ matrix.platform }}
+          platforms: linux/amd64
           builder: ${{ steps.buildx.outputs.name }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-      - name: Upload image
+      - name: Upload image (amd64)
         uses: actions/upload-artifact@v3
         with:
-          name: cross-${{ matrix.target }}-${{ matrix.platform }}
+          name: cross-${{ matrix.target }}-amd64
+          path: /tmp/cross-${{ matrix.target }}.tar
+      - name: Clear tmp
+        run: rm -rf /tmp/*
+      - name: Download image (arm64)
+        uses: actions/download-artifact@v3
+        with:
+          name: base-img-${{ matrix.type }}-arm64
+          path: /tmp
+      - name: Load image (amd64)
+        run: |
+          docker load --input /tmp/base-img-${{ matrix.type }}.tar
+          docker image ls -a
+      - name: Vars
+        run: |
+          echo "BUILD_DATE=$(date --utc)" >> $GITHUB_ENV
+      - name: Build and push Docker images (arm64)
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./cross/Dockerfile
+          pull: false
+          tags: cross:${{ matrix.target }}
+          outputs: type=docker,dest=/tmp/cross-${{ matrix.target }}.tar
+          labels: |
+            tech.harmless.experimental.name="cross:${{ matrix.target }}"
+            tech.harmless.experimental.pull_request_build="${{ github.event_name == 'pull_request' }}"
+            tech.harmless.experimental.run_number="${{ github.run_number }}"
+            tech.harmless.experimental.repo="${{ github.repositoryUrl }}"
+            tech.harmless.experimental.build_date="${{ env.BUILD_DATE }}"
+            tech.harmless.experimental.platform="arm64"
+            org.opencontainers.image.authors="harmless-tech, crow-rest"
+          platforms: linux/arm64
+          builder: ${{ steps.buildx.outputs.name }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+      - name: Upload image (arm64)
+        uses: actions/upload-artifact@v3
+        with:
+          name: cross-${{ matrix.target }}-arm64
           path: /tmp/cross-${{ matrix.target }}.tar
