--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         platform: [amd64, arm64]
         include:
-#          - target: x86_64-unknown-linux-gnu
+          - target: x86_64-unknown-linux-gnu
           - target: x86_64-unknown-linux-musl
 #          - target: aarch64-unknown-linux-gnu
 #          - target: aarch64-unknown-linux-musl
@@ -76,5 +76,3 @@ jobs:
         with:
           name: cross-${{ matrix.target }}-${{ matrix.platform }}
           path: /tmp/cross-${{ matrix.target }}-${{ matrix.platform }}.tar
-      - name: Clear tmp
-        run: rm -rf /tmp/*
