--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         platform: [amd64, arm64]
         include:
           - target: x86_64-unknown-linux-gnu
-          # - target: x86_64-unknown-linux-musl
+          - target: x86_64-unknown-linux-musl
 #          - target: aarch64-unknown-linux-gnu
 #          - target: aarch64-unknown-linux-musl
 #          - target: x86_64-unknown-freebsd
