--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,9 +13,10 @@ jobs:
       fail-fast: false
       matrix:
         platform: [amd64, arm64]
-        include:
-          - target: x86_64-unknown-linux-gnu
-          - target: x86_64-unknown-linux-musl
+        target: 
+          - x86_64-unknown-linux-gnu
+          - x86_64-unknown-linux-musl
+        # include:
 #          - target: aarch64-unknown-linux-gnu
 #          - target: aarch64-unknown-linux-musl
 #          - target: x86_64-unknown-freebsd
