--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,6 +59,7 @@ jobs:
         with:
           context: ./
           file: ./cross-ink/${{ matrix.target }}.Dockerfile
+          no-cache: true
           pull: true
           push: false
           tags: cross:${{ matrix.target }}
@@ -91,7 +92,7 @@ jobs:
 
           docker run --rm --pull=never \
             -v /home/runner/.rustup/toolchains/stable-x86_64-unknown-linux-gnu:/usr/local/rustup/toolchains/stable-x86_64-unknown-linux-gnu:ro \
-            -v /home/runner/.cargo/bin/cargo:/usr/local/cargo/bin/cargo/cargo:ro \
+            -v /home/runner/.cargo/bin/cargo:/usr/local/cargo/bin/cargo/cargo \
             -v ./:/project \
             --entrypoint /bin/sh \
             cross:${{ matrix.target }} \
