--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -91,8 +91,8 @@ jobs:
           cd cargo-prebuilt
 
           docker run --rm --pull=never \
-            -v /home/runner/.rustup/toolchains/stable-x86_64-unknown-linux-gnu:/usr/local/rustup/toolchains/stable-x86_64-unknown-linux-gnu:ro \
-            -v /home/runner/.cargo/bin/cargo:/usr/local/cargo/bin/cargo/cargo \
+            -v /home/runner/.rustup/toolchains/stable-x86_64-unknown-linux-gnu:/usr/local/rustup/toolchains/stable-x86_64-unknown-linux-gnu:z,ro \
+            -v /home/runner/.cargo/bin/cargo:/usr/local/cargo/bin/cargo/cargo:z \
             -v ./:/project \
             --entrypoint /bin/sh \
             cross:${{ matrix.target }} \
