--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,8 @@ jobs:
       matrix:
         platform: [amd64, arm64]
         target:
-          - riscv64gc-unknown-linux-musl
+          - riscv64gc-unknown-linux-gnu
+          # - riscv64gc-unknown-linux-musl
           - x86_64-unknown-linux-gnu
           - x86_64-unknown-linux-musl
         # include:
@@ -87,9 +88,6 @@ jobs:
       - name: Test
         if: ${{ matrix.platform == 'amd64'}}
         run: |
-          rustup update
-          rustup target add ${{ matrix.target }}
-
           git clone https://github.com/cargo-prebuilt/cargo-prebuilt
           cd cargo-prebuilt
 
