--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
         target:
           - riscv64gc-unknown-linux-gnu
           # - riscv64gc-unknown-linux-musl
+          - s390x-unknown-linux-gnu
           - x86_64-unknown-linux-gnu
           - x86_64-unknown-linux-musl
         # include:
