--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
         target:
           - aarch64-unknown-linux-gnu
           - aarch64-unknown-linux-musl
+          - armv7-unknown-linux-gnueabihf
+          - armv7-unknown-linux-musleabihf
           - riscv64gc-unknown-linux-gnu
           # - riscv64gc-unknown-linux-musl
           - s390x-unknown-linux-gnu
