--- a/.github/workflows/test-crates.yml
+++ b/.github/workflows/test-crates.yml
@@ -26,15 +26,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/cache@v3
+        id: cache
+        with:
+          path: |
+            /tmp/cross-${{ matrix.target }}-${{ matrix.platform }}.tar
       - name: Set up QEMU
+        if: ${{ !steps.cache.outputs.cache-hit }}
         uses: docker/setup-qemu-action@v3
       - name: Docker Setup Buildx
+        if: ${{ !steps.cache.outputs.cache-hit }}
         id: buildx
         uses: docker/setup-buildx-action@v3
       - name: Vars
         run: |
           echo "BUILD_DATE=$(date --utc)" >> $GITHUB_ENV
       - name: Build and push Docker images
+        if: ${{ !steps.cache.outputs.cache-hit }}
         uses: docker/build-push-action@v5
         with:
           context: ./
