--- a/.github/workflows/test-crates.yml
+++ b/.github/workflows/test-crates.yml
@@ -192,5 +192,5 @@ jobs:
           python-version: "3.11"
       - uses: actions/download-artifact@v3
       - name: Run
-        run: python3 ./test/run.py
+        run: python3 ./test/run.py ${{ matrix.crate }}
       
